# md-to-pptx

./: .env.example  .gitignore  .python-version  README.md  pyproject.toml  requirements.txt
.kiro/specs/md-to-pptx-report-generator/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: project-setup.md
md_to_pptx/: __init__.py  content_summarizer.py  env_loader.py  exceptions.py  font_manager.py  main.py  markdown_parser.py  models.py  report_generator.py  slide_composer.py  template_analyzer.py
tests/: __init__.py  conftest.py  test_content_summarizer.py  test_font_manager.py  test_markdown_parser.py  test_report_generator.py  test_slide_composer.py  test_template_analyzer.py
